<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/background_desgin"
    tools:context=".SetupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_height="150dp"
        android:contentDescription="@string/logo_talking"
        app:srcCompat="@drawable/logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        android:layout_below="@+id/imageView"
        android:id="@+id/app_name"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/medium_margin"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="text"
        android:background="@drawable/input_field"
        android:padding="@dimen/large_padding"
        android:layout_margin="@dimen/small_margin"

        />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/medium_margin"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text"
        android:background="@drawable/input_field"
        android:padding="@dimen/large_padding"
        android:layout_margin="@dimen/small_margin"

        />

    <Button
        android:id="@+id/button_save"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_field"
        android:text="@string/save"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/large_padding"
        />

</RelativeLayout>